--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ apply plugin: 'com.bugtags.library.plugin'
 apply plugin: 'com.neenbedankt.android-apt'
 
 android {
+    useLibrary 'org.apache.http.legacy'
+
     compileSdkVersion 25
     buildToolsVersion '25.0.2'
     repositories {
@@ -12,8 +14,8 @@ android {
         applicationId "com.maotong.readhub"
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 138
-        versionName '1.3.8'
+        versionCode 1
+        versionName '1.0.0'
     }
     buildTypes {
         release {
@@ -25,7 +27,7 @@ android {
                 variant.outputs.each { output ->
                     def outputFile = output.outputFile
                     if (outputFile != null && outputFile.name.endsWith('.apk')) {
-                        def fileName = "calendar_${defaultConfig.versionName}_${variant.productFlavors[0].name}.apk"
+                        def fileName = "readhub_${defaultConfig.versionName}_${variant.productFlavors[0].name}.apk"
                         output.outputFile = new File(outputFile.parent, fileName)
                     }
                 }
@@ -34,7 +36,6 @@ android {
     }
     productFlavors {
 
-        caiyao {}
         wandoujia {}
         baidu {}
         c360 {}
@@ -50,7 +51,6 @@ android {
     }
 }
 
-def retrofitVersion = '2.1.0'
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile('com.squareup.retrofit2:converter-simplexml:2.0.2') {
@@ -82,7 +82,7 @@ dependencies {
 }
 
 bugtags {
-    appKey "1b1f86c7b80aaf78f076860ccebb5807"
-    appSecret "0243d5d764a831047b9a675a1fa3bf90"
+    appKey "50ff7c62b153b1900b4b82670c7b35b8"
+    appSecret "4a9d13ac8ebe298a99690c3d3e3a8e74"
     mappingUploadEnabled true
 }
